# Bake-Off

./: .gitignore  PROJECT_COMPLETE.md  SHARK-BAKEOFF-PLAN.md
analysis/phase-12-mitigation/: QUICKSTART.md  README.md  test_mitigation.py
analysis/phase-13-final-report/: EXECUTIVE_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUICKSTART.md  README.md  STAKEHOLDER_PRESENTATION.md  generate_deployment_guide.py  generate_executive_summary.py  generate_final_report.py  generate_presentation.py
analysis/phase-a-optimization/: QUICKSTART.md  README.md  RESULTS_SUMMARY.md  aggregate_results.py  test_configs.py
analysis/phase-b-comparison/: QUICKSTART.md  README.md  RESULTS_SUMMARY.md  analyze_crossover.py  run_comparison.py
analysis/phase-c-decision/: QUICKSTART.md  README.md  aggregate_all_results.py  calculate_scores.py  final_scores.json  generate_decision.py  real_final_scores.json
benchmark/: QUICK START.md
benchmark/curation/: CT7_VISUALIZATION_ASSESSMENT.md  QUICKSTART.md  README.md  curation_tests.py  requirements.txt
benchmark/harness/: README.md  analyze_results.py  comprehensive_evaluation.py  metrics.py  quick_comparison.sh  quick_comprehensive_test.py  quick_demo_comparison.py  requirements.txt  run_full_comparison.sh  runner.py  thresholds.py  workload.py
data/sample/: .gitignore  (+5 more)
implementations/rust/: .env.example  Cargo.toml  QUICKSTART.md  README.md  install_rust.sh
implementations/rust/src/: cache.rs  config.rs  error.rs  handlers.rs  kafka.rs  main.rs  memgraph_repository.rs  models.rs  neo4j_repository.rs  postgres_repository.rs  repository.rs
(+62 files in other folders)
