[package]
name = "shark-bakeoff-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Async runtime and utilities
futures = "0.3"
async-trait = "0.1"

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.12"

# Neo4j/Memgraph
neo4rs = "0.7"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment and configuration
dotenv = "0.15"
config = "0.14"

# HTTP client (for health checks, etc)
reqwest = { version = "0.11", features = ["json"] }

# Kafka
rdkafka = { version = "0.36", features = ["tokio"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
